[package]
name = "pcap_web_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
axum-extra = { version = "0.12.1", features = ["multipart"] }
hyper = "1.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.42"
nom = "8.0.0"
pcap = "2.3.0"
anyhow = "1"

# pcap_parser = { path = "../parser" }
